# Multiprocess_game

Game_client/: CMakeLists.txt  main.cpp  player.cpp  player.h
Game_server/: CMakeLists.txt  beast.cpp  beast.h  labirynth.cpp  labirynth.h  main.cpp  player.cpp  player.h  server.cpp  server.h
